<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_main_image_height"
          android:scaleType="fitCenter"
          android:src="@drawable/bicicle" />

      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_main_line"
          android:background="@android:color/black"></View>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="@dimen/activity_main_padding">

          <TextView
              android:id="@+id/item_title_id"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/bicicle_name_text_view"
              android:textSize="@dimen/item_title" />

          <ImageButton
              android:layout_width="@dimen/activity_main_like_button_dimen"
              android:layout_height="@dimen/activity_main_like_button_dimen"
              android:layout_alignParentEnd="true"
              android:layout_marginEnd="@dimen/activity_main_like_button_margin_end"
              android:background="@color/colorNo"
              android:scaleType="fitCenter"
              android:src="@drawable/emoji_like"
              android:id="@+id/like_btn"/>

          <TextView
              android:id="@+id/activit_main_color_tag"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_alignStart="@+id/item_title_id"
              android:layout_marginTop="@dimen/activity_main_margin_between_objs"
              android:text="@string/color_text_view" />

          <RadioGroup
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:layout_below="@+id/activit_main_color_tag"
              android:orientation="horizontal"
              android:id="@+id/radio_group_1">

              <RadioButton
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/radio_button_1"
                  android:paddingRight="@dimen/activity_main_paddinr_between_radio_btn"
                  android:buttonTint="@color/colorRadioButn1"/>
              <RadioButton
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/radio_button_2"
                  android:paddingRight="@dimen/activity_main_paddinr_between_radio_btn"
                  android:buttonTint="@color/colorRadioButn2"/>
              <RadioButton
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/radio_button_3"
                  android:paddingRight="@dimen/activity_main_paddinr_between_radio_btn"
                  android:buttonTint="@color/colorRadioButn3"/>
              <RadioButton
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/radio_button_4"
                  android:paddingRight="@dimen/activity_main_paddinr_between_radio_btn"
                  android:buttonTint="@color/colorRadioButn4"/>


          </RadioGroup>

          <RadioGroup
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_alignParentEnd="true"
              android:id="@+id/radio_group_2"
              android:layout_below="@+id/radio_group_1"
              android:layout_marginTop="@dimen/activity_main_like_button_margin_end">

              <Button
                  android:layout_width="@dimen/activity_main_icon_size"
                  android:layout_height="@dimen/activity_main_icon_size"
                  android:id="@+id/btn_small"
                  android:layout_marginEnd="@dimen/activity_main_paddinr_between_radio_btn"
                  android:background="@drawable/cuadro"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/btn_s_size"
                  android:onClick="onClick"
                  />

              <Button
                  android:layout_width="@dimen/activity_main_icon_size"
                  android:layout_height="@dimen/activity_main_icon_size"
                  android:layout_marginEnd="@dimen/activity_main_paddinr_between_radio_btn"
                  android:background="@drawable/cuadro"
                  android:textColor="@color/colorPrimary"
                  android:id="@+id/btn_med"
                  android:onClick="onClick"
                  android:text="@string/btn_m_size"/>

              <Button
                  android:layout_width="@dimen/activity_main_icon_size"
                  android:layout_height="@dimen/activity_main_icon_size"
                  android:layout_marginEnd="@dimen/activity_main_paddinr_between_radio_btn"
                  android:background="@drawable/cuadro"
                  android:textColor="@color/colorPrimary"
                  android:id="@+id/btn_L"
                  android:onClick="onClick"
                  android:text="@string/btn_long_size"/>
              <Button
                  android:layout_width="@dimen/activity_main_icon_size"
                  android:layout_height="@dimen/activity_main_icon_size"
                  android:layout_marginEnd="@dimen/activity_main_paddinr_between_radio_btn"
                  android:background="@drawable/cuadro"
                  android:textColor="@color/colorPrimary"
                  android:id="@+id/btn_XL"
                  android:onClick="onClick"
                  android:text="@string/btn_xl_size"/>


          </RadioGroup>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/description_title_text_view"
              android:textSize="@dimen/contents_title"
              android:layout_below="@id/radio_group_2"
              android:id="@+id/description_textview"
              android:layout_marginTop="@dimen/activity_main_paddinr_between_radio_btn"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/description_content_text_view"
              android:textSize="@dimen/contents_title"
              android:layout_below="@id/description_textview"
              android:id="@+id/descrption_content"
              android:layout_marginTop="@dimen/activity_main_paddinr_between_radio_btn"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/measurement_title_text_view"
              android:textSize="@dimen/contents_title"
              android:layout_below="@id/descrption_content"
              android:id="@+id/measurement_text_view"
              android:layout_marginTop="@dimen/activity_main_paddinr_between_radio_btn"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/measurment_content_text_view"
              android:textSize="@dimen/contents_title"
              android:layout_below="@id/measurement_text_view"
              android:id="@+id/measurement_content_view"
              android:layout_marginTop="@dimen/activity_main_paddinr_between_radio_btn"/>

          <Button
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/add_to_car_button"
              android:id="@+id/btn_add_to_car"
              android:layout_below="@id/measurement_content_view"
              android:onClick="onClick"/>


      </RelativeLayout>
  </LinearLayout>

</ScrollView>